docs: add Steam configuration to .env.example
- Add ENABLE_STEAM feature flag
- Add STEAM_API_KEY and STEAM_ID configuration options
- Include API Key and Steam ID64 acquisition instruction

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ ENABLE_POEM=true
 ENABLE_APPLE_HEALTH=true
 ENABLE_XIAOMI_SPORT=false
 ENABLE_WEREAD=false
+ENABLE_STEAM=true
 
 # ==========================================
 # GitHub 统计 (可选)
@@ -66,3 +67,11 @@ DUOLINGO_USERNAME=your_duolingo_username
 # JWT Token 从浏览器获取:
 # document.cookie.match(new RegExp('(^| )jwt_token=([^;]+)'))[0].slice(11)
 DUOLINGO_JWT_TOKEN=your_jwt_token
+
+# ==========================================
+# Steam (可选)
+# ==========================================
+# API Key 申请: https://steamcommunity.com/dev/apkey
+# Steam ID64 获取: https://steamid.io/
+STEAM_API_KEY=your_steam_api_key
+STEAM_ID=your_steam_id64
